# nilvm-client-py

./: .gitignore  .gitmodules  .nil-sdk.toml  builder.dockerfile  justfile  patch.txt  pyproject.toml
.github/workflows/: ci.yml
client-core/: Cargo.toml  README.md  README.pyproject.md  nillion_client_core.pyi  pyproject.toml  rust-toolchain.toml
client-core/src/: encrypted_value.rs  lib.rs  programs.rs  public_variable_tests.rs  secrets_tests.rs
client-core/src/values/: array.rs  blob.rs  bool.rs  ecdsa_digest_message.rs  ecdsa_private_key.rs  ecdsa_public_key.rs  ecdsa_signature.rs  eddsa_message.rs  eddsa_private_key.rs  eddsa_public_key.rs  eddsa_signature.rs  integer.rs  mod.rs  store_id.rs  unsigned_integer.rs
client-core/tests/: tests.py
client-proto/: pyproject.toml
client-proto/scripts/: add_init_py_files.py  gen-proto.sh
client-proto/src/nillion_client_proto/nillion/payments/v1/balance/: __init__.py
client-proto/src/nillion_client_proto/nillion/values/v1/value/: __init__.py
docs/: about.rst  client.rst  conf.py  generate.sh  index.rst  install.rst  support.rst  tutorials.rst
docs/_ext/: copy_tutorials.py
scripts/: docker-publish.sh  package.sh  test-rc-packages.sh
scripts/version_checker/: pyproject.toml  version_checker.py
src/nillion_client/: __init__.py  client.py  values.py  vm_operation.py
tests/: test_nillion_client.py
tests/resources/programs/: main.py  main_complex.py
tests/resources/scripts/: run_devnet.sh
